--- a/univerchain/templates/accounts/password_reset/form.html
+++ b/univerchain/templates/accounts/password_reset/form.html
@@ -8,7 +8,7 @@
 
 {% if request.user.is_authenticated %}
 <script>
-    window.location.href = '{% url "accounts:dashboard" %}';
+    window.location.href = '{% url "accounts:orders" %}';
 </script>
 {% endif %}
 
