--- a/univerchain/templates/accounts/user/edit_info.html
+++ b/univerchain/templates/accounts/user/edit_info.html
@@ -22,7 +22,7 @@
                                 Your info is updated.
                             </div>
                             <p class="small text-center">
-                                <a href="{% url 'accounts:dashboard' %}"> Back to dashboard </a>
+                                <a href="{% url 'accounts:orders' %}"> Back to orders </a>
                             </p>
                             {% else %}
                             <h3>Change your info</h3>
@@ -46,9 +46,9 @@
                                 {{ edit_form.email }}
                             </div>
                             <div class="form-group">
-                                <label>{{ edit_form.first_name.label }}<span class="text-muted small">
+                                <label>{{ edit_form.name.label }}<span class="text-muted small">
                                     </span></label>
-                                {{ edit_form.first_name }}
+                                {{ edit_form.name }}
                             </div>
                             <button type="submit" value="Edit" class="btn btn-secondary btn-block">Save Changes</button>
                         </form>
